Added files required to generate Figure 9.

--- a/run07_HAT-P-11b_BART/BART_HAT-P-11b.cfg
+++ b/run07_HAT-P-11b_BART/BART_HAT-P-11b.cfg
@@ -1,6 +1,6 @@
 [MCMC]
 # Location of the output directory:
-loc_dir = ./BARToffset/
+loc_dir = ./BART_retrieval/
 
 # Tepfile name:
 tep_name = ../inputs/TEP/HAT-P-11b.tep
