Updated config files (outflux into outspec) and fixed ethresh typo.

--- a/run01_CIA/H2+He-CIA_Borysow.cfg
+++ b/run01_CIA/H2+He-CIA_Borysow.cfg
@@ -1,5 +1,5 @@
 # Atmospheric input file:
-atm    ../inputs/atmfile/uniform01.atm
+atm     ../inputs/atmfile/uniform01.atm
 
 # Cross-section input files:
 csfile  ../BART/modules/transit/inputs/CIA_Borysow_H2H2_0060-7000K_0.61-500um.dat,../BART/modules/transit/inputs/CIA_Borysow_H2He_1000-7000K_0.5-400um.dat
@@ -31,4 +31,4 @@ toomuch 10
 verb 3
 
 # Output emission spectrum:
-outflux  ./emission_H2He_1.0-20um_Borysow.dat
+outspec  ./emission_H2He_1.0-20um_Borysow.dat
