--- a/run02_H2O/Transit_H2O-pands.cfg
+++ b/run02_H2O/Transit_H2O-pands.cfg
@@ -33,7 +33,7 @@ toomuch 10
 ethresh 1e-6
 
 # Verbosity level:
-verb  3
+verb 4
 
 # Output emission spectrum:
-outflux  ./emission_H2O-pands_1-20um.dat
+outspec  ./emission_H2O-pands_1-20um.dat
