--- a/run04_CO2/Transit_CO2-HITEMP.cfg
+++ b/run04_CO2/Transit_CO2-HITEMP.cfg
@@ -36,4 +36,4 @@ ethresh 1e-6
 verb 4
 
 # Output emission spectrum:
-outflux  emission_CO2-HITEMP_1-20um.dat
+outspec  emission_CO2-HITEMP_1-20um.dat
