--- a/run05_CH4/Transit_CH4-ExoMol.cfg
+++ b/run05_CH4/Transit_CH4-ExoMol.cfg
@@ -2,7 +2,7 @@
 atm     ../inputs/atmfile/uniform01.atm
 
 # Cross-section input files:
-csfile  ../inputs/CIA/CIA_HITRAN_H2H2_0200-3000K_1.0-500um.dat,../inputs/CIA/CIA_HITRAN_H2He_0200-9900K_0.5-500um.dat,../inputs/opacity/CH4/ExoMol_CH4_500.0-11999.0cm-1_1000-2000K.dat
+csfile  ../inputs/CIA/CIA_HITRAN_H2H2_0200-3000K_1.0-500um.dat,../inputs/CIA/CIA_HITRAN_H2He_0200-9900K_0.5-500um.dat,../inputs/opacity/CH4/ExoMol_CH4_500.0-11999.0cm-1_0200-2000K.dat
 
 # Molecular info file:
 molfile ../BART/modules/transit/inputs/molecules.dat
@@ -31,4 +31,4 @@ toomuch 10
 verb 4
 
 # Output emission spectrum:
-outflux    emission_CH4-ExoMol_1-20um.dat
+outspec    emission_CH4-ExoMol_1-20um.dat
