--- a/run06_TiO-VO/Transit_TiO-VO.cfg
+++ b/run06_TiO-VO/Transit_TiO-VO.cfg
@@ -42,5 +42,5 @@ opacityfile  ./opacity_TiO-VO_2200-2300K_0.1-1.0bar.dat
 verb 4
 
 # Output emission spectrum:
-outflux  ./TiO-VO_0.4-1.6um.dat
+outspec  ./TiO-VO_0.4-1.6um.dat
 
