--- a/run07_HAT-P-11b_BART/BART_HAT-P-11b.cfg
+++ b/run07_HAT-P-11b_BART/BART_HAT-P-11b.cfg
@@ -137,7 +137,7 @@ refpress  = 0.1
 starrad   = 0.75
 
 # Opacity lines' strength threshold:
-ethresh = 1e−6
+ethresh = 1e-6
 
 # Opacity-grid temperature lower boundary (in Kelvin):
 tlow   =  200
@@ -149,7 +149,7 @@ tempdelt = 100
 opacityfile = ./BARTinputs/opacity_HITRAN_1-5.5um.dat
 
 # Output spectrum file name:
-outmod     = ./HAT-P-11b_transit_spectrum_1-5.5um.dat
+outspec    = ./HAT-P-11b_transit_spectrum_1-5.5um.dat
 # Output file with the radius where the optical depth reached toomuch:
 outtoomuch = ./HAT-P-11b_transit_toom.dat
 # Output file with the samplings info:
