--- a/run01_CIA/H2+He-CIA_HITRAN.cfg
+++ b/run01_CIA/H2+He-CIA_HITRAN.cfg
@@ -31,4 +31,4 @@ toomuch 10
 verb 3
 
 # Output emission spectrum:
-outflux  ./emission_H2He_1.0-20um_HITRAN.dat
+outspec  ./emission_H2He_1.0-20um_HITRAN.dat
