--- a/run03_CO/Transit_CO-HITEMP.cfg
+++ b/run03_CO/Transit_CO-HITEMP.cfg
@@ -36,4 +36,4 @@ ethresh 1e-6
 verb 4
 
 # Output emission spectrum:
-outflux    emission_CO-HITEMP_1-20um.dat
+outspec    emission_CO-HITEMP_1-20um.dat
