Updated bestfit files.

--- a/inputs/bestfit/bestFit_tconfig.cfg
+++ b/inputs/bestfit/bestFit_tconfig.cfg
@@ -1,15 +1,15 @@
-atm /home/patricio/ast/esp01/compendia/CubillosEtal2018_HATP11b/run07_HAT-P-11b_BART/BART_retrieval/bestFit.atm
-csfile /home/patricio/ast/esp01/compendia/CubillosEtal2018_HATP11b/inputs/CIA/CIA_HITRAN_H2H2_0200-3000K_1.0-500um.dat,/home/patricio/ast/esp01/compendia/CubillosEtal2018_HATP11b/inputs/CIA/CIA_HITRAN_H2He_0200-9900K_0.5-500um.dat
+atm ./inputs/bestfit/bestFit.atm
+csfile ./inputs/CIA/CIA_HITRAN_H2H2_0200-3000K_1.0-500um.dat,./inputs/CIA/CIA_HITRAN_H2He_0200-9900K_0.5-500um.dat
 gsurf 1127.5
-linedb /home/patricio/ast/esp01/compendia/CubillosEtal2018_HATP11b/run07_HAT-P-11b_BART/HITRAN_H2O_CH4_CO_CO2_NH3_HCN_C2H2_1-5.5um.tli
-molfile /home/patricio/ast/esp01/compendia/CubillosEtal2018_HATP11b/BART/modules/transit/inputs/molecules.dat
+linedb ./run07_HAT-P-11b_BART/HITRAN_H2O_CH4_CO_CO2_NH3_HCN_C2H2_1-5.5um.tli
+molfile ./BART/modules/transit/inputs/molecules.dat
 nwidth 20
-opacityfile /home/patricio/ast/esp01/compendia/CubillosEtal2018_HATP11b/run07_HAT-P-11b_BART/BART_retrieval/opacity_HITRAN_1-5.5um.dat
-outsample ./HAT-P-11b_transit_samp.dat
-outspec /home/patricio/ast/esp01/compendia/CubillosEtal2018_HATP11b/run07_HAT-P-11b_BART/BART_retrieval/HAT-P-11b_transit_spectrum_1-5.5um.dat
+opacityfile ./run07_HAT-P-11b_BART/BARTinputs/opacity_HITRAN_1-5.5um.dat
+outsample  ./HAT-P-11b_transit_samp.dat
+outspec    ./HAT-P-11b_transit_spectrum_1-5.5um.dat
 outtoomuch ./HAT-P-11b_transit_toom.dat
 refpress 0.1
-refradius 29776.972
+refradius 29671.24
 solution transit
 starrad 0.75
 tempdelt 100
