Updated all config, figs, and code files after fixing bug in transit resampling code.

--- a/run07_HAT-P-11b_BART/BART_inputs.cfg
+++ b/run07_HAT-P-11b_BART/BART_inputs.cfg
@@ -82,37 +82,37 @@ uncert = 0.000040 0.000047 0.000046 0.000038 0.000041 0.000038 0.000045
          0.000074 0.000025 0.000029
 
 # The waveband filters:
-filter = ../inputs/filters/WFC3_HAT11/fWFC3_01.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_02.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_03.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_04.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_05.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_06.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_07.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_08.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_09.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_10.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_11.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_12.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_13.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_14.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_15.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_16.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_17.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_18.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_19.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_20.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_21.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_22.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_23.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_24.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_25.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_26.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_27.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_28.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_29.dat
-         ../BART/inputs/filters/spitzer_irac1_sa.dat
-         ../BART/inputs/filters/spitzer_irac2_sa.dat
+filters = ../inputs/filters/WFC3_HAT11/fWFC3_01.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_02.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_03.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_04.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_05.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_06.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_07.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_08.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_09.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_10.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_11.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_12.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_13.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_14.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_15.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_16.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_17.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_18.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_19.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_20.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_21.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_22.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_23.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_24.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_25.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_26.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_27.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_28.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_29.dat
+          ../BART/inputs/filters/spitzer_irac1_sa.dat
+          ../BART/inputs/filters/spitzer_irac2_sa.dat
 
 # List of molecules being fit:
 molfit = H2O CO2 CO CH4
