--- a/run07_HAT-P-11b_BART/BART_HAT-P-11b.cfg
+++ b/run07_HAT-P-11b_BART/BART_HAT-P-11b.cfg
@@ -29,37 +29,37 @@ uncert = 0.000040 0.000047 0.000046 0.000038 0.000041 0.000038 0.000045
          0.000074 0.000025 0.000029
 
 # The waveband filters:
-filter = ../inputs/filters/WFC3_HAT11/fWFC3_01.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_02.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_03.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_04.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_05.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_06.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_07.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_08.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_09.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_10.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_11.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_12.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_13.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_14.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_15.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_16.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_17.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_18.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_19.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_20.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_21.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_22.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_23.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_24.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_25.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_26.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_27.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_28.dat
-         ../inputs/filters/WFC3_HAT11/fWFC3_29.dat
-         ../BART/inputs/filters/spitzer_irac1_sa.dat
-         ../BART/inputs/filters/spitzer_irac2_sa.dat
+filters = ../inputs/filters/WFC3_HAT11/fWFC3_01.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_02.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_03.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_04.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_05.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_06.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_07.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_08.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_09.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_10.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_11.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_12.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_13.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_14.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_15.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_16.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_17.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_18.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_19.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_20.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_21.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_22.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_23.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_24.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_25.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_26.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_27.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_28.dat
+          ../inputs/filters/WFC3_HAT11/fWFC3_29.dat
+          ../BART/inputs/filters/spitzer_irac1_sa.dat
+          ../BART/inputs/filters/spitzer_irac2_sa.dat
 
 # List of molecules being fit:
 molfit = H2O CH4 CO CO2
@@ -70,17 +70,18 @@ Tmax = 3000.0
 
 # Model fitting parameters:
 #          kappa  g1    g2   alpha beta  rad     offset    H2O  CH4  CO   CO2
+parnames = kappa  g1    g2   alpha beta   R_p    offset    H2O  CH4  CO   CO2
 params   = -2.0   0.0   1.0  0.0   1.0   29100.0 -0.00009  2.0 -1.0 -1.0 -1.0
 pmin     = -5.0  -3.0  -2.0  0.0   0.15  15000.0 -0.00050 -9.0 -9.0 -9.0 -9.0
 pmax     =  2.0   2.0   1.0  1.0   2.0   45000.0  0.00050  3.0  3.0  3.0  5.5
 stepsize =  0.3   0.3   0.0  0.0   0.05    100.0  0.00001  0.3  0.5  0.5  0.5
 
 # Total number of MCMC samples (burn-in + final MCMC):
-numit       = 5e5
+numit       = 1e6
 # Number of parallel MCMC chains (= number of processors):
-nchains     = 12
+nchains     = 24
 # Number of burn-in iterations per chain:
-burnin      = 3000
+burnin      = 8000
 # MCMC algorithm ('demc' for Differential Evolution or 'mrw' for 
 #  Metropolis Random Walk with Gaussian proposals):
 walk        = snooker
