Updated everything to latest version.

--- a/run02_H2O/Transit_H2O-pands.cfg
+++ b/run02_H2O/Transit_H2O-pands.cfg
@@ -23,6 +23,8 @@ wnosamp 2160
 # Wavenumber units (cm-1):
 wnfct   1.0
 
+nwidth 100.0
+
 # Observing geomtry:
 solution eclipse
 raygrid 0 20 40 60 80
