--- a/run03_CO/Transit_CO-HITEMP.cfg
+++ b/run03_CO/Transit_CO-HITEMP.cfg
@@ -16,6 +16,8 @@ wlhigh 20.0
 # Wavelength units (microns):
 wlfct  1e-4
 
+nwidth 500
+
 # Wavenumber spectrum spacing:
 wndelt  1.0
 # Oversampling factor:
