--- a/run07_HAT-P-11b_BART/BART_inputs.cfg
+++ b/run07_HAT-P-11b_BART/BART_inputs.cfg
@@ -32,12 +32,12 @@ abun_basic = ../BART/inputs/abundances_Asplund2009.txt
 
 # Multiplication factor for heavy-element abundances:
 solar_times = 1
-    
+
 # Swap C/O abundance ratio (True) or not (False):
 COswap = False
 
 # Elemental abundances file name (.abn extension):
-abun_file = solar1x.abn 
+abun_file = solar1x.abn
 
 
 # Temperature profile ::::::::::::::::::::::::::::::::::::::::::::::::
@@ -58,8 +58,7 @@ in_elem  = H He C N O
 # Output species:
 out_spec = H_g He_ref C_g N_g O_g H2_ref CO_g CO2_g CH4_g H2O_g NH3_g C2H2_g C2H4_g HCN_g
 
-# If not None, set uniform mole mixing ratios for each out_spec, e.g.:
-#   uniform = 1e-9 0.15 1e-9 1e-9 1e-9 0.85 1e-4 1e-4 1e-4 1e-4 1e-9 1e-9 1e-9
+# If not None, set uniform mole mixing ratios:
 uniform = None
 
 # Atmospheric File (P, T, species-abundances) ::::::::::::::::::::::::
@@ -122,21 +121,21 @@ Tmin =  200.0
 Tmax = 3000.0
 
 # Model fitting parameters:
-#          kappa  g1    g2  alpha beta  rad       offset  H2O  CH4   CO  CO2
+parnames = kappa g1    g2   alpha beta   R_p     offset   H2O  CH4  CO   CO2
 params   = -2.0   0.0   1.0  0.0  1.0   29100.0 -0.00009  0.0  0.0  0.0  0.0
 pmin     = -5.0  -3.0  -2.0  0.0  0.15  25000.0 -0.00020 -9.0 -9.0 -9.0 -9.0
 pmax     =  2.0   2.0   1.0  1.0  1.5   35000.0  0.00020  3.0  1.5  1.5  1.5
 stepsize =  0.01  0.01  0.0  0.0  0.01     50.0  0.00001  0.1  0.1  0.1  0.1
 
 # Total number of MCMC samples (burn-in + final MCMC):
-numit       = 1e5
+numit       = 1e6
 # Number of parallel MCMC chains (= number of processors):
-nchains     = 10
+nchains     = 21
 # Number of burn-in iterations per chain:
-burnin      = 1000
-# MCMC algorithm ('demc' for Differential Evolution or 'mrw' for 
+burnin      = 8000
+# MCMC algorithm ('demc' for Differential Evolution or 'mrw' for
 #  Metropolis Random Walk with Gaussian proposals):
-walk        = demc
+walk        = snooker
 # Perform a least-square fit before the MCMC:
 leastsq     = False
 # Scale data uncertainties to enforce reduced chi-square == 1:
@@ -151,13 +150,13 @@ plots       = True
 logfile     = MCMC.log
 
 # Verbosity level (0--5):
-verb = 4
+verb = 1
 
 # Transit variables ::::::::::::::::::::::::::::::::::::::::::::::::::
 # Output transit configuration file name:
 tconfig = ./config_transit.cfg
 # Transit line information (TLI) file:
-linedb = ./HITRAN_H2O_CH4_CO_CO2_NH3_HCN_C2H2_1-5.5um.tli
+linedb = ./HITRAN_H2O_CH4_CO_CO2_1-5.5um.tli
 # Cross-section absorption files:
 csfile = ../inputs/CIA/CIA_HITRAN_H2H2_0200-3000K_1.0-500um.dat
          ../inputs/CIA/CIA_HITRAN_H2He_0200-9900K_0.5-500um.dat
