--- a/run07_HAT-P-11b_BART/pyline_hitran_1-5.5um.cfg
+++ b/run07_HAT-P-11b_BART/pyline_hitran_1-5.5um.cfg
@@ -35,20 +35,17 @@ db_list = ../inputs/opacity/H2O/01_1750-2000_HITEMP2010.par
           ../inputs/opacity/CO2/02_5500-6000_HITEMP2010.par
           ../inputs/opacity/CO2/02_6000-6500_HITEMP2010.par
           ../inputs/opacity/CO2/02_6500-12785_HITEMP2010.par
-          ../inputs/opacity/NH3/11_hit12.par
-          ../inputs/opacity/HCN/23_hit08.par
-          ../inputs/opacity/C2H2/26_hit12.par
 
 part_list = ctips ctips ctips ctips ctips ctips ctips ctips ctips ctips
             ctips ctips ctips ctips ctips ctips ctips ctips ctips ctips
             ctips ctips ctips ctips ctips ctips ctips ctips ctips ctips
-            ctips ctips ctips ctips ctips ctips ctips ctips ctips
+            ctips ctips ctips ctips ctips ctips
 
 dbtype   = hit hit hit hit hit hit hit hit hit hit
            hit hit hit hit hit hit hit hit hit hit
            hit hit hit hit hit hit hit hit hit hit
-           hit hit hit hit hit hit hit hit hit
-output   = HITRAN_H2O_CH4_CO_CO2_NH3_HCN_C2H2_1-5.5um.tli
-iwav     =  1.0
-fwav     =  5.5
+           hit hit hit hit hit hit
+output   = HITRAN_H2O_CH4_CO_CO2_1-5.5um.tli
+iwav     = 1.0
+fwav     = 5.5
 verb     = 4
