--- a/run07_HAT-P-11b_BART/BART_HATP11b_fraine.cfg
+++ b/run07_HAT-P-11b_BART/BART_HATP11b_fraine.cfg
@@ -1,18 +1,23 @@
 [MCMC]
 # Location of the output directory:
-loc_dir = ./BART_retrieval/
+loc_dir = ./retrieval_fraine/
 
 # Tepfile name:
 tep_name = ../inputs/TEP/HAT-P-11b.tep
 
 # Kurucz stellar spectrum file:
-kurucz   = ../inputs/kurucz/hatp11b-fp02k2odfnew.pck
+kurucz = ../inputs/kurucz/hatp11b-fp02k2odfnew.pck
 
-# Atmospheric File:
-atmfile = ./BARTinputs/atmosphe_HAT-P-11b_uniforms.atm
 
-# Pressure-temperature model:
-PTtype = line
+# Temperature profile ::::::::::::::::::::::::::::::::::::::::::::::::
+# Set the type of model ('line' or 'madhu'):
+PTtype = iso
+# Set the parameters for the initial profile:
+PTinit = 900.0
+
+# Atmospheric File (P, T, species-abundances) ::::::::::::::::::::::::
+atmfile = ./atmosphere_HAT-P-11b_uniform.atm
+
 
 # MCMC arguments :::::::::::::::::::::::::::::::::::::::::::::::::::::
 # The data (eclipse or transit depths):
@@ -29,37 +34,40 @@ uncert = 0.000040 0.000047 0.000046 0.000038 0.000041 0.000038 0.000045
          0.000074 0.000025 0.000029
 
 # The waveband filters:
-filters = ../inputs/filters/WFC3_HAT11/fWFC3_01.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_02.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_03.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_04.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_05.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_06.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_07.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_08.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_09.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_10.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_11.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_12.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_13.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_14.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_15.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_16.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_17.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_18.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_19.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_20.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_21.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_22.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_23.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_24.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_25.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_26.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_27.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_28.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_29.dat
-          ../BART/inputs/filters/spitzer_irac1_sa.dat
-          ../BART/inputs/filters/spitzer_irac2_sa.dat
+filters = ../inputs/filters/fraine2014_wfc3_g141_1.153um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.172um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.190um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.209um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.228um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.247um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.266um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.284um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.303um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.322um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.341um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.360um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.379um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.397um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.416um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.435um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.454um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.473um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.492um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.510um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.529um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.548um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.567um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.586um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.604um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.623um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.642um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.661um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.680um.dat
+    ../BART/inputs/filters/spitzer_irac1_sa.dat
+    ../BART/inputs/filters/spitzer_irac2_sa.dat
+
+func = hack BARTfunc ../BART/code/
+#func = hack BARTfunc_offset ../BART/code/
 
 # List of molecules being fit:
 molfit = H2O CH4 CO CO2
@@ -69,19 +77,19 @@ Tmin =  200.0
 Tmax = 3000.0
 
 # Model fitting parameters:
-parnames = kappa g1    g2   alpha beta   R_p    offset     H2O  CH4  CO   CO2
-params   = -2.0  0.0   1.0  0.0   1.0   29100.0 -0.00009   7.0  5.0  5.0  5.0
-pmin     = -5.0 -3.0  -2.0  0.0   0.15  15000.0 -0.00050   0.0  0.0  0.0  0.0
-pmax     =  2.0  2.0   1.0  1.0   2.0   45000.0  0.00050  10.0 10.0 10.0 10.0
-stepsize =  0.3  0.3   0.0  0.0   0.05    100.0  0.00001   0.5  0.5  0.5  0.5
+parnames =   temp   R_p    pcloud   offset  H2O  CH4   CO  CO2
+params   =  800.0  29100.0    0.0 -0.00009  6.0  5.0  6.0  3.0
+pmin     =  200.5  15000.0   -6.0 -0.00020  0.0  0.0  0.0  0.0
+pmax     = 2999.5  45000.0    2.0  0.00020 10.0 10.0 10.0 10.0
+stepsize =   30.0    100.0    0.3  0.00001  0.3  0.3  0.3  0.3
 
 # Total number of MCMC samples (burn-in + final MCMC):
 numit       = 1e6
 # Number of parallel MCMC chains (= number of processors):
-nchains     = 21
+nchains = 7
 # Number of burn-in iterations per chain:
 burnin      = 8000
-# MCMC algorithm ('demc' for Differential Evolution or 'mrw' for 
+# MCMC algorithm ('demc' for Differential Evolution or 'mrw' for
 #  Metropolis Random Walk with Gaussian proposals):
 walk        = snooker
 hsize       = 10
@@ -92,11 +100,11 @@ chisqscale  = False
 # Perform the Gelman-Rubin convergence test along the MCMC:
 grtest      = True
 # Filename to store the model fit for each MCMC evaluation:
-savemodel   = True
+savemodel   = models.npy
 # Make plots:
 plots       = True
 # MCMC log file:
-logfile     = MCMC.log
+logfile     = MCMC_fraine.log
 
 # Verbosity level (0--5):
 verb = 1
@@ -107,12 +115,12 @@ tconfig = ./config_transit.cfg
 # Cross-section absorption files:
 csfile = ../inputs/CIA/CIA_HITRAN_H2H2_0200-3000K_1.0-500um.dat
          ../inputs/CIA/CIA_HITRAN_H2He_0200-9900K_0.5-500um.dat
-# Molecular info file:
+
 molfile = ../BART/modules/transit/inputs/molecules.dat
 
 # Spectral boundaries:
-wllow   =  1.0
-wlhigh  =  5.5
+wllow   = 1.0
+wlhigh  = 5.5
 wlfct   = 1e-4
 
 # Spectral sampling rate:
@@ -127,12 +135,18 @@ solution = transit
 # Maximum optical depth to calculate:
 toomuch = 3.0
 # Number of HWHM:
-nwidth = 20
+nwidth = 100
+
+# Cloud-deck top pressure (log-bar)
+cloudtop = 0.0
+
+# Rayleigh scattering
+#scattering = 0.0
 
 # Reference pressure (bar) where radius(p0) = Rp:
-refpress  = 0.1
-# Stellar radius (in Solar radii):
-starrad   = 0.75
+refpress = 0.1
+# Stellar radius (in Solar radii, Yee et al, 2018):
+starrad = 0.68  
 
 # Opacity lines' strength threshold:
 ethresh = 1e-6
@@ -144,10 +158,10 @@ thigh  = 3000
 # Opacity-grid temperature sampling interval (in Kelvin):
 tempdelt = 100
 # Opacity-grid file name:
-opacityfile = ./BARTinputs/opacity_HITRAN_1-5.5um.dat
+opacityfile = inputs_fraine/opacity_HITEMP_Exomol_1.0-5.5um.dat
 
 # Output spectrum file name:
-outspec    = ./HAT-P-11b_transit_spectrum_1-5.5um.dat
+outspec    = ./HAT-P-11b_fraine_transit_spectrum_1.0-5.5um.dat
 # Output file with the radius where the optical depth reached toomuch:
 outtoomuch = ./HAT-P-11b_transit_toom.dat
 # Output file with the samplings info:
