--- a/run07_HAT-P-11b_BART/BART_inputs_fraine.cfg
+++ b/run07_HAT-P-11b_BART/BART_inputs_fraine.cfg
@@ -1,6 +1,6 @@
 [MCMC]
 # Location of the output directory:
-loc_dir = ./BARTinputs/
+loc_dir = ./inputs_fraine/
 
 # Tepfile name:
 tep_name = ../inputs/TEP/HAT-P-11b.tep
@@ -11,13 +11,13 @@ kurucz   = ../inputs/kurucz/hatp11b-fp02k2odfnew.pck
 
 # Atmospheric pressure layers: :::::::::::::::::::::::::::::::::::::::
 # Pressure filename (.pres extenesion):
-press_file = 150layers.pres
+press_file = 51layers.pres
 
 # Number of layers:
-n_layers = 150
+n_layers = 51
 
 # Pressure at the top of the atmosphere (in bars):
-p_top    = 1e-8
+p_top = 1e-8
 
 # Pressure at the bottom of the atmosphere (in bars):
 p_bottom = 100.0
@@ -42,10 +42,10 @@ abun_file = solar1x.abn
 
 # Temperature profile ::::::::::::::::::::::::::::::::::::::::::::::::
 # Set the type of model ('line' or 'madhu'):
-PTtype = line
+PTtype = iso
 # Set the parameters for the initial profile:
 #  Line Etal 2013:  [log10(kappa)  log10(gamma1)  log10(gamma2)  alpha  beta]
-PTinit = -2.0  -0.45  1.0  0.0  1.0
+PTinit = 900.0
 
 
 # Atmospheric Elemental Abundances (pre-atmospheric) File ::::::::::::
@@ -81,37 +81,40 @@ uncert = 0.000040 0.000047 0.000046 0.000038 0.000041 0.000038 0.000045
          0.000074 0.000025 0.000029
 
 # The waveband filters:
-filters = ../inputs/filters/WFC3_HAT11/fWFC3_01.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_02.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_03.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_04.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_05.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_06.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_07.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_08.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_09.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_10.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_11.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_12.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_13.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_14.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_15.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_16.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_17.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_18.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_19.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_20.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_21.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_22.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_23.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_24.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_25.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_26.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_27.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_28.dat
-          ../inputs/filters/WFC3_HAT11/fWFC3_29.dat
-          ../BART/inputs/filters/spitzer_irac1_sa.dat
-          ../BART/inputs/filters/spitzer_irac2_sa.dat
+filters =
+    ../inputs/filters/fraine2014_wfc3_g141_1.153um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.172um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.190um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.209um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.228um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.247um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.266um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.284um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.303um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.322um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.341um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.360um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.379um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.397um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.416um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.435um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.454um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.473um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.492um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.510um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.529um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.548um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.567um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.586um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.604um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.623um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.642um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.661um.dat
+    ../inputs/filters/fraine2014_wfc3_g141_1.680um.dat
+    ../BART/inputs/filters/spitzer_irac1_sa.dat
+    ../BART/inputs/filters/spitzer_irac2_sa.dat
+
+func = hack BARTfunc ../BART/code/
 
 # List of molecules being fit:
 molfit = H2O CO2 CO CH4
@@ -121,11 +124,11 @@ Tmin =  200.0
 Tmax = 3000.0
 
 # Model fitting parameters:
-parnames = kappa g1    g2   alpha beta   R_p     offset   H2O  CH4  CO   CO2
-params   = -2.0   0.0   1.0  0.0  1.0   29100.0 -0.00009  0.0  0.0  0.0  0.0
-pmin     = -5.0  -3.0  -2.0  0.0  0.15  25000.0 -0.00020 -9.0 -9.0 -9.0 -9.0
-pmax     =  2.0   2.0   1.0  1.0  1.5   35000.0  0.00020  3.0  1.5  1.5  1.5
-stepsize =  0.01  0.01  0.0  0.0  0.01     50.0  0.00001  0.1  0.1  0.1  0.1
+parnames =   temp   R_p     offset   H2O  CH4  CO   CO2
+params   =  800.0  29100.0 -0.00009  0.0  0.0  0.0  0.0
+pmin     =  200.0  25000.0 -0.00020 -9.0 -9.0 -9.0 -9.0
+pmax     = 3000.0  35000.0  0.00020  3.0  1.5  1.5  1.5
+stepsize =   10.0     50.0  0.00001  0.1  0.1  0.1  0.1
 
 # Total number of MCMC samples (burn-in + final MCMC):
 numit       = 1e6
@@ -156,7 +159,7 @@ verb = 1
 # Output transit configuration file name:
 tconfig = ./config_transit.cfg
 # Transit line information (TLI) file:
-linedb = ./HITRAN_H2O_CH4_CO_CO2_1-5.5um.tli
+linedb = ./HITEMP_CH4_CO_CO2_Exomol_H2O_0.34-5.5um.tli
 # Cross-section absorption files:
 csfile = ../inputs/CIA/CIA_HITRAN_H2H2_0200-3000K_1.0-500um.dat
          ../inputs/CIA/CIA_HITRAN_H2He_0200-9900K_0.5-500um.dat
@@ -164,8 +167,8 @@ csfile = ../inputs/CIA/CIA_HITRAN_H2H2_0200-3000K_1.0-500um.dat
 molfile = ../BART/modules/transit/inputs/molecules.dat
 
 # Spectral boundaries:
-wllow   =  1.0
-wlhigh  =  5.5
+wllow   = 1.0
+wlhigh  = 5.5
 wlfct   = 1e-4
 
 # Spectral sampling rate:
@@ -180,12 +183,12 @@ solution = transit
 # Maximum optical depth to calculate:
 toomuch = 3.0
 # Number of HWHM:
-nwidth = 20
+nwidth = 100
 
 # Reference pressure (bar) where radius(p0) = Rp:
-refpress  = 0.1
+refpress = 0.1
 # Stellar radius (in Solar radii):
-starrad   = 0.75
+starrad = 0.75
 
 # Opacity lines' strength threshold:
 ethresh = 1e-6
@@ -197,10 +200,10 @@ thigh  = 3000
 # Opacity-grid temperature sampling interval (in Kelvin):
 tempdelt = 100
 # Opacity-grid file name:
-opacityfile = opacity_HITRAN_1-5.5um.dat
+opacityfile = opacity_HITEMP_Exomol_1.0-5.5um.dat
 
 # Output spectrum file name:
-outspec    = ./HAT-P-11b_transit_spectrum_1-5.5um.dat
+outspec    = ./HAT-P-11b_transit_spectrum_0.34-5.5um.dat
 # Output file with the radius where the optical depth reached toomuch:
 outtoomuch = ./HAT-P-11b_transit_toom.dat
 # Output file with the samplings info:
