Updated scripts up to HAT-P11b opacity for submit 02.

--- a/run03_CO/Transit_CO-HITEMP.cfg
+++ b/run03_CO/Transit_CO-HITEMP.cfg
@@ -16,14 +16,14 @@ wlhigh 20.0
 # Wavelength units (microns):
 wlfct  1e-4
 
-nwidth 500
-
 # Wavenumber spectrum spacing:
 wndelt  1.0
 # Oversampling factor:
 wnosamp 2160
 # Wavenumber units (cm-1):
 wnfct   1.0
+# Voigt line-wings width (in HWHM):
+nwidth 500
 
 # Observing geomtry:
 solution eclipse
@@ -32,7 +32,7 @@ raygrid 0 20 40 60 80
 # Optical-depth calculation threshold:
 toomuch 10
 # Extinction-coefficient threshold:
-ethresh 1e-6
+ethresh 1e-10
 
 # Verbosity level:
 verb 4
