--- a/run04_CO2/Transit_CO2-HITEMP.cfg
+++ b/run04_CO2/Transit_CO2-HITEMP.cfg
@@ -22,6 +22,8 @@ wndelt  1.0
 wnosamp 2160
 # Wavenumber units (cm-1):
 wnfct   1.0
+# Voigt line-wings width (in HWHM):
+nwidth 100.0
 
 # Observing geometry:
 solution eclipse
@@ -30,7 +32,7 @@ raygrid 0 20 40 60 80
 # Optical-depth calculation threshold:
 toomuch 10
 # Extinction-coefficient threshold:
-ethresh 1e-6
+ethresh 1e-10
 
 # Verbosity level:
 verb 4
