--- a/run05_CH4/Transit_CH4-ExoMol_repack.cfg
+++ b/run05_CH4/Transit_CH4-ExoMol_repack.cfg
@@ -1,8 +1,10 @@
 # Atmospheric input file:
-atm     ../inputs/atmfile/uniform01.atm
+atm ../inputs/atmfile/uniform02.atm
 
+# TLI file (line-transition data):
+linedb ./CH4-ExoMol_repack_1-20um.tli
 # Cross-section input files:
-csfile  ../inputs/CIA/CIA_HITRAN_H2H2_0200-3000K_1.0-500um.dat,../inputs/CIA/CIA_HITRAN_H2He_0200-9900K_0.5-500um.dat,../inputs/opacity/CH4/ExoMol_CH4_500.0-11999.0cm-1_0200-2000K.dat
+csfile  ../inputs/CIA/CIA_HITRAN_H2H2_0200-3000K_1.0-500um.dat,../inputs/CIA/CIA_HITRAN_H2He_0200-9900K_0.5-500um.dat
 
 # Molecular info file:
 molfile ../BART/modules/transit/inputs/molecules.dat
@@ -19,6 +21,8 @@ wndelt  1.0
 wnosamp 2160
 # Wavenumber units (cm-1):
 wnfct   1.0
+# Voigt line-wings width (in HWHM):
+nwidth 100
 
 # Observing geomtry:
 solution eclipse
@@ -26,9 +30,12 @@ raygrid 0 20 40 60 80
 
 # Optical-depth calculation threshold:
 toomuch 10
+# Extinction-coefficient threshold:
+ethresh 1e-10
 
 # Verbosity level:
 verb 4
 
 # Output emission spectrum:
-outspec    emission_CH4-ExoMol_1-20um.dat
+outspec emission_CH4-ExoMol_repack_1-20um.dat
+
