--- a/run07_HAT-P-11b_BART/BART_HATP11b_chachan_all.cfg
+++ b/run07_HAT-P-11b_BART/BART_HATP11b_chachan_all.cfg
@@ -42,7 +42,8 @@ uncert =
        0.000029     0.000032
 
 # The waveband filters:
-filters = ../inputs/filters/chachan2019_stis_g430l_0.373um.dat
+filters =
+    ../inputs/filters/chachan2019_stis_g430l_0.373um.dat
     ../inputs/filters/chachan2019_stis_g430l_0.428um.dat
     ../inputs/filters/chachan2019_stis_g430l_0.484um.dat
     ../inputs/filters/chachan2019_stis_g430l_0.538um.dat
@@ -107,29 +108,27 @@ pmax     = 2999.5  45000.0    2.0   10.0  0.00020 10.0 10.0 10.0 10.0
 stepsize =   30.0    100.0    0.3    0.3  0.00000  0.3  0.3  0.3  0.3
 
 # Total number of MCMC samples (burn-in + final MCMC):
-numit       = 2e6
-#numit       = 1000
+numit = 2e6
 # Number of parallel MCMC chains (= number of processors):
-nchains     = 16
+nchains = 16
 # Number of burn-in iterations per chain:
-burnin      = 8000
-#burnin      = 8
-# MCMC algorithm ('demc' for Differential Evolution or 'mrw' for 
+burnin = 8000
+# MCMC algorithm ('demc' for Differential Evolution or 'mrw' for
 #  Metropolis Random Walk with Gaussian proposals):
-walk        = snooker
-hsize       = 10
+walk = snooker
+hsize = 10
 # Perform a least-square fit before the MCMC:
-leastsq     = False
+leastsq = False
 # Scale data uncertainties to enforce reduced chi-square == 1:
-chisqscale  = False
+chisqscale = False
 # Perform the Gelman-Rubin convergence test along the MCMC:
-grtest      = True
+grtest = True
 # Filename to store the model fit for each MCMC evaluation:
-savemodel   = models_chachan_all.npy
+savemodel = models_chachan_all.npy
 # Make plots:
-plots       = True
+plots = True
 # MCMC log file:
-logfile     = MCMC_chachan_all.log
+logfile = MCMC_chachan_all.log
 
 # Verbosity level (0--5):
 verb = 1
@@ -166,15 +165,15 @@ nwidth = 100
 cloudtop = 0.0
 
 # Rayleigh scattering
-scattering = 0.0
+scattering = 0.1
 
 # Reference pressure (bar) where radius(p0) = Rp:
-refpress  = 0.1
+refpress = 0.1
 # Stellar radius (in Solar radii):
-starrad   = 0.68
+starrad = 0.68
 
 # Opacity lines' strength threshold:
-ethresh = 1e-6
+ethresh = 1e-10
 
 # Opacity-grid temperature lower boundary (in Kelvin):
 tlow   =  200
@@ -186,7 +185,7 @@ tempdelt = 100
 opacityfile = inputs_chachan/opacity_HITEMP_Exomol_0.34-5.5um.dat
 
 # Output spectrum file name:
-outspec    = ./HAT-P-11b_chachan_all_transit_spectrum_0.34-5.5um.dat
+outspec = ./HAT-P-11b_chachan_all_transit_spectrum_0.34-5.5um.dat
 # Output file with the radius where the optical depth reached toomuch:
 outtoomuch = ./HAT-P-11b_transit_toom.dat
 # Output file with the samplings info:
