--- a/run07_HAT-P-11b_BART/BART_inputs_chachan.cfg
+++ b/run07_HAT-P-11b_BART/BART_inputs_chachan.cfg
@@ -6,151 +6,55 @@ loc_dir = ./inputs_chachan/
 tep_name = ../inputs/TEP/HAT-P-11b.tep
 
 # Kurucz stellar spectrum file:
-kurucz   = ../inputs/kurucz/hatp11b-fp02k2odfnew.pck
+kurucz = ../inputs/kurucz/hatp11b-fp02k2odfnew.pck
 
+# Atmospheric File:
+atmfile = ./atmosphere_HAT-P-11b_uniform.atm
 
-# Atmospheric pressure layers: :::::::::::::::::::::::::::::::::::::::
-# Pressure filename (.pres extenesion):
-press_file = 51layers.pres
-
-# Number of layers:
-n_layers = 51
-
-# Pressure at the top of the atmosphere (in bars):
-p_top = 1e-8
-
-# Pressure at the bottom of the atmosphere (in bars):
-p_bottom = 100.0
-
-# Use log (True) or linear (False) pressure scale:
-log = True
-
-
-# Elemental-abundances file ::::::::::::::::::::::::::::::::::::::::::
-# Basic elemental abundances file:
-abun_basic = ../BART/inputs/abundances_Asplund2009.txt
-
-# Multiplication factor for heavy-element abundances:
-solar_times = 1
-
-# Swap C/O abundance ratio (True) or not (False):
-COswap = False
-
-# Elemental abundances file name (.abn extension):
-abun_file = solar1x.abn
-
-
-# Temperature profile ::::::::::::::::::::::::::::::::::::::::::::::::
-# Set the type of model ('line' or 'madhu'):
+# Pressure-temperature model:
 PTtype = iso
-# Set the parameters for the initial profile:
-#  Line Etal 2013:  [log10(kappa)  log10(gamma1)  log10(gamma2)  alpha  beta]
-PTinit = 900.0
 
-
-# Atmospheric Elemental Abundances (pre-atmospheric) File ::::::::::::
-# Pre atmospheric filename (.atm extenstion):
-preatm_file = TEA_preatm.atm
-
-# Elemental species:
-in_elem  = H He C N O
-
-# Output species:
-out_spec = H_g He_ref C_g N_g O_g H2_ref CO_g CO2_g CH4_g H2O_g NH3_g C2H2_g C2H4_g HCN_g
-
-# If not None, set uniform mole mixing ratios:
-uniform = None
-
-# Atmospheric File (P, T, species-abundances) ::::::::::::::::::::::::
-# TEA output file (the 'atmospheric file') name:
-atmfile = atmosphe_HAT-P-11b.atm
-
-
-# MCMC arguments :::::::::::::::::::::::::::::::::::::::::::::::::::::
-# The data (eclipse or transit depths):
-data   = 0.003502 0.003407 0.003421 0.003445 0.003350 0.003377 0.003380
-         0.003457 0.003436 0.003448 0.003476 0.003536 0.003499 0.003498
-         0.003524 0.003591 0.003524 0.003520 0.003447 0.003344 0.003513
-         0.003471 0.003438 0.003414 0.003383 0.003415 0.003480 0.003498
-         0.003376 0.003354 0.003373
-# Data uncertainties:
-uncert = 0.000040 0.000047 0.000046 0.000038 0.000041 0.000038 0.000045
-         0.000040 0.000035 0.000039 0.000043 0.000044 0.000046 0.000040
-         0.000041 0.000044 0.000043 0.000039 0.000039 0.000045 0.000041
-         0.000050 0.000049 0.000053 0.000045 0.000038 0.000048 0.000060
-         0.000074 0.000025 0.000029
-
-# The waveband filters:
-filters =
-    ../inputs/filters/fraine2014_wfc3_g141_1.153um.dat
-    ../inputs/filters/fraine2014_wfc3_g141_1.172um.dat
-    ../inputs/filters/fraine2014_wfc3_g141_1.190um.dat
-    ../inputs/filters/fraine2014_wfc3_g141_1.209um.dat
-    ../inputs/filters/fraine2014_wfc3_g141_1.228um.dat
-    ../inputs/filters/fraine2014_wfc3_g141_1.247um.dat
-    ../inputs/filters/fraine2014_wfc3_g141_1.266um.dat
-    ../inputs/filters/fraine2014_wfc3_g141_1.284um.dat
-    ../inputs/filters/fraine2014_wfc3_g141_1.303um.dat
-    ../inputs/filters/fraine2014_wfc3_g141_1.322um.dat
-    ../inputs/filters/fraine2014_wfc3_g141_1.341um.dat
-    ../inputs/filters/fraine2014_wfc3_g141_1.360um.dat
-    ../inputs/filters/fraine2014_wfc3_g141_1.379um.dat
-    ../inputs/filters/fraine2014_wfc3_g141_1.397um.dat
-    ../inputs/filters/fraine2014_wfc3_g141_1.416um.dat
-    ../inputs/filters/fraine2014_wfc3_g141_1.435um.dat
-    ../inputs/filters/fraine2014_wfc3_g141_1.454um.dat
-    ../inputs/filters/fraine2014_wfc3_g141_1.473um.dat
-    ../inputs/filters/fraine2014_wfc3_g141_1.492um.dat
-    ../inputs/filters/fraine2014_wfc3_g141_1.510um.dat
-    ../inputs/filters/fraine2014_wfc3_g141_1.529um.dat
-    ../inputs/filters/fraine2014_wfc3_g141_1.548um.dat
-    ../inputs/filters/fraine2014_wfc3_g141_1.567um.dat
-    ../inputs/filters/fraine2014_wfc3_g141_1.586um.dat
-    ../inputs/filters/fraine2014_wfc3_g141_1.604um.dat
-    ../inputs/filters/fraine2014_wfc3_g141_1.623um.dat
-    ../inputs/filters/fraine2014_wfc3_g141_1.642um.dat
-    ../inputs/filters/fraine2014_wfc3_g141_1.661um.dat
-    ../inputs/filters/fraine2014_wfc3_g141_1.680um.dat
-    ../BART/inputs/filters/spitzer_irac1_sa.dat
-    ../BART/inputs/filters/spitzer_irac2_sa.dat
+press_file = 51layers.pres
+abun_file = solar1x.abn
 
 func = hack BARTfunc ../BART/code/
 
 # List of molecules being fit:
-molfit = H2O CO2 CO CH4
+molfit = H2O CH4 CO CO2
 
 # Temperature boundaries:
 Tmin =  200.0
 Tmax = 3000.0
 
 # Model fitting parameters:
-parnames =   temp   R_p     offset   H2O  CH4  CO   CO2
-params   =  800.0  29100.0 -0.00009  0.0  0.0  0.0  0.0
-pmin     =  200.0  25000.0 -0.00020 -9.0 -9.0 -9.0 -9.0
-pmax     = 3000.0  35000.0  0.00020  3.0  1.5  1.5  1.5
-stepsize =   10.0     50.0  0.00001  0.1  0.1  0.1  0.1
+parnames =   temp   R_p    pcloud  k_ray   offset  H2O  CH4   CO  CO2
+params   =  800.0  29100.0    0.0    0.0  0.00000  6.0  5.0  6.0  3.0
+pmin     =  200.5  15000.0   -6.0   -5.0 -0.00020  0.0  0.0  0.0  0.0
+pmax     = 2999.5  45000.0    2.0   10.0  0.00020 10.0 10.0 10.0 10.0
+stepsize =   30.0    100.0    0.3    0.3  0.00000  0.3  0.3  0.3  0.3
 
 # Total number of MCMC samples (burn-in + final MCMC):
-numit       = 1e6
+numit = 2e6
 # Number of parallel MCMC chains (= number of processors):
-nchains     = 21
+nchains = 16
 # Number of burn-in iterations per chain:
-burnin      = 8000
+burnin = 8000
 # MCMC algorithm ('demc' for Differential Evolution or 'mrw' for
 #  Metropolis Random Walk with Gaussian proposals):
-walk        = snooker
+walk = snooker
+hsize = 10
 # Perform a least-square fit before the MCMC:
-leastsq     = False
+leastsq = False
 # Scale data uncertainties to enforce reduced chi-square == 1:
-chisqscale  = False
+chisqscale = False
 # Perform the Gelman-Rubin convergence test along the MCMC:
-grtest      = True
+grtest = True
 # Filename to store the model fit for each MCMC evaluation:
-savemodel   = band_eclipse.npy
+savemodel = models.npy
 # Make plots:
-plots       = True
+plots = True
 # MCMC log file:
-logfile     = MCMC.log
+logfile = MCMC_chachan_init.log
 
 # Verbosity level (0--5):
 verb = 1
@@ -167,12 +71,12 @@ csfile = ../inputs/CIA/CIA_HITRAN_H2H2_0200-3000K_1.0-500um.dat
 molfile = ../BART/modules/transit/inputs/molecules.dat
 
 # Spectral boundaries:
-wllow   = 0.34
-wlhigh  = 5.5
-wlfct   = 1e-4
+wllow = 0.34
+wlhigh = 5.5
+wlfct = 1e-4
 
 # Spectral sampling rate:
-wndelt  = 1.0
+wndelt = 1.0
 wnosamp = 2160
 # Wavenumber unit conversion to cm-1 (default: 1.0, inverse centimeters):
 wnfct = 1.0
@@ -187,23 +91,20 @@ nwidth = 100
 
 # Reference pressure (bar) where radius(p0) = Rp:
 refpress = 0.1
-# Stellar radius (in Solar radii):
-starrad = 0.75
+# Stellar radius (in Solar radii, Yee et al, 2018):
+starrad = 0.68
 
 # Opacity lines' strength threshold:
-ethresh = 1e-6
+ethresh = 1e-10
 
-# Opacity-grid temperature lower boundary (in Kelvin):
-tlow   =  200
-# Opacity-grid temperature higher boundary (in Kelvin):
-thigh  = 3000
-# Opacity-grid temperature sampling interval (in Kelvin):
-tempdelt = 100
-# Opacity-grid file name:
+# Opacity-grid name and temperatures:
 opacityfile = opacity_HITEMP_Exomol_0.34-5.5um.dat
+tlow = 200
+thigh = 3000
+tempdelt = 100
 
 # Output spectrum file name:
-outspec    = ./HAT-P-11b_transit_spectrum_0.34-5.5um.dat
+outspec = ./HAT-P-11b_chachan_transit_spectrum_0.34-5.5um.dat
 # Output file with the radius where the optical depth reached toomuch:
 outtoomuch = ./HAT-P-11b_transit_toom.dat
 # Output file with the samplings info:
