--- a/run02_H2O/Transit_H2O-pands.cfg
+++ b/run02_H2O/Transit_H2O-pands.cfg
@@ -22,7 +22,7 @@ wndelt  1.0
 wnosamp 2160
 # Wavenumber units (cm-1):
 wnfct   1.0
-
+# Voigt line-wings width (in HWHM):
 nwidth 100.0
 
 # Observing geomtry:
@@ -32,7 +32,7 @@ raygrid 0 20 40 60 80
 # Optical-depth calculation threshold:
 toomuch 10
 # Extinction-coefficient threshold:
-ethresh 1e-6
+ethresh 1e-10
 
 # Verbosity level:
 verb 4
