--- a/run07_HAT-P-11b_BART/BART_HATP11b_fraine.cfg
+++ b/run07_HAT-P-11b_BART/BART_HATP11b_fraine.cfg
@@ -34,7 +34,8 @@ uncert = 0.000040 0.000047 0.000046 0.000038 0.000041 0.000038 0.000045
          0.000074 0.000025 0.000029
 
 # The waveband filters:
-filters = ../inputs/filters/fraine2014_wfc3_g141_1.153um.dat
+filters =
+    ../inputs/filters/fraine2014_wfc3_g141_1.153um.dat
     ../inputs/filters/fraine2014_wfc3_g141_1.172um.dat
     ../inputs/filters/fraine2014_wfc3_g141_1.190um.dat
     ../inputs/filters/fraine2014_wfc3_g141_1.209um.dat
@@ -67,7 +68,6 @@ filters = ../inputs/filters/fraine2014_wfc3_g141_1.153um.dat
     ../BART/inputs/filters/spitzer_irac2_sa.dat
 
 func = hack BARTfunc ../BART/code/
-#func = hack BARTfunc_offset ../BART/code/
 
 # List of molecules being fit:
 molfit = H2O CH4 CO CO2
@@ -84,27 +84,27 @@ pmax     = 2999.5  45000.0    2.0  0.00020 10.0 10.0 10.0 10.0
 stepsize =   30.0    100.0    0.3  0.00001  0.3  0.3  0.3  0.3
 
 # Total number of MCMC samples (burn-in + final MCMC):
-numit       = 1e6
+numit = 3e6
 # Number of parallel MCMC chains (= number of processors):
 nchains = 7
 # Number of burn-in iterations per chain:
-burnin      = 8000
+burnin = 8000
 # MCMC algorithm ('demc' for Differential Evolution or 'mrw' for
 #  Metropolis Random Walk with Gaussian proposals):
-walk        = snooker
-hsize       = 10
+walk = snooker
+hsize = 10
 # Perform a least-square fit before the MCMC:
-leastsq     = False
+leastsq = False
 # Scale data uncertainties to enforce reduced chi-square == 1:
-chisqscale  = False
+chisqscale = False
 # Perform the Gelman-Rubin convergence test along the MCMC:
-grtest      = True
+grtest = True
 # Filename to store the model fit for each MCMC evaluation:
-savemodel   = models.npy
+savemodel = models.npy
 # Make plots:
-plots       = True
+plots = True
 # MCMC log file:
-logfile     = MCMC_fraine.log
+logfile = MCMC_fraine.log
 
 # Verbosity level (0--5):
 verb = 1
@@ -146,19 +146,16 @@ cloudtop = 0.0
 # Reference pressure (bar) where radius(p0) = Rp:
 refpress = 0.1
 # Stellar radius (in Solar radii, Yee et al, 2018):
-starrad = 0.68  
+starrad = 0.68
 
 # Opacity lines' strength threshold:
-ethresh = 1e-6
+ethresh = 1e-10
 
-# Opacity-grid temperature lower boundary (in Kelvin):
-tlow   =  200
-# Opacity-grid temperature higher boundary (in Kelvin):
-thigh  = 3000
-# Opacity-grid temperature sampling interval (in Kelvin):
-tempdelt = 100
-# Opacity-grid file name:
+# Opacity-grid name and temperatures:
 opacityfile = inputs_fraine/opacity_HITEMP_Exomol_1.0-5.5um.dat
+tlow  =  200
+thigh = 3000
+tempdelt = 100
 
 # Output spectrum file name:
 outspec    = ./HAT-P-11b_fraine_transit_spectrum_1.0-5.5um.dat
