--- a/run07_HAT-P-11b_BART/BART_HATP11b_chachan_all.cfg
+++ b/run07_HAT-P-11b_BART/BART_HATP11b_chachan_all.cfg
@@ -42,8 +42,7 @@ uncert =
        0.000029     0.000032
 
 # The waveband filters:
-filters =
-    ../inputs/filters/chachan2019_stis_g430l_0.373um.dat
+filters = ../inputs/filters/chachan2019_stis_g430l_0.373um.dat
     ../inputs/filters/chachan2019_stis_g430l_0.428um.dat
     ../inputs/filters/chachan2019_stis_g430l_0.484um.dat
     ../inputs/filters/chachan2019_stis_g430l_0.538um.dat
