--- a/run07_HAT-P-11b_BART/BART_HATP11b_chachan_hst.cfg
+++ b/run07_HAT-P-11b_BART/BART_HATP11b_chachan_hst.cfg
@@ -40,8 +40,7 @@ uncert =
        0.000035     0.000042     0.000035     0.000044     0.000119
 
 # The waveband filters:
-filters =
-    ../inputs/filters/chachan2019_stis_g430l_0.373um.dat
+filters = ../inputs/filters/chachan2019_stis_g430l_0.373um.dat
     ../inputs/filters/chachan2019_stis_g430l_0.428um.dat
     ../inputs/filters/chachan2019_stis_g430l_0.484um.dat
     ../inputs/filters/chachan2019_stis_g430l_0.538um.dat
