--- a/run07_HAT-P-11b_BART/BART_HATP11b_fraine.cfg
+++ b/run07_HAT-P-11b_BART/BART_HATP11b_fraine.cfg
@@ -8,34 +8,33 @@ tep_name = ../inputs/TEP/HAT-P-11b.tep
 # Kurucz stellar spectrum file:
 kurucz = ../inputs/kurucz/hatp11b-fp02k2odfnew.pck
 
-
-# Temperature profile ::::::::::::::::::::::::::::::::::::::::::::::::
-# Set the type of model ('line' or 'madhu'):
-PTtype = iso
-# Set the parameters for the initial profile:
-PTinit = 900.0
-
-# Atmospheric File (P, T, species-abundances) ::::::::::::::::::::::::
+# Atmospheric File:
 atmfile = ./atmosphere_HAT-P-11b_uniform.atm
 
+# Pressure-temperature model:
+PTtype = iso
+
+press_file = 51layers.pres
+abun_file = solar1x.abn
 
 # MCMC arguments :::::::::::::::::::::::::::::::::::::::::::::::::::::
 # The data (eclipse or transit depths):
-data   = 0.003502 0.003407 0.003421 0.003445 0.003350 0.003377 0.003380
-         0.003457 0.003436 0.003448 0.003476 0.003536 0.003499 0.003498
-         0.003524 0.003591 0.003524 0.003520 0.003447 0.003344 0.003513
-         0.003471 0.003438 0.003414 0.003383 0.003415 0.003480 0.003498
-         0.003376 0.003354 0.003373
+data =
+    0.003502 0.003407 0.003421 0.003445 0.003350 0.003377 0.003380
+    0.003457 0.003436 0.003448 0.003476 0.003536 0.003499 0.003498
+    0.003524 0.003591 0.003524 0.003520 0.003447 0.003344 0.003513
+    0.003471 0.003438 0.003414 0.003383 0.003415 0.003480 0.003498
+    0.003376 0.003354 0.003373
 # Data uncertainties:
-uncert = 0.000040 0.000047 0.000046 0.000038 0.000041 0.000038 0.000045
-         0.000040 0.000035 0.000039 0.000043 0.000044 0.000046 0.000040
-         0.000041 0.000044 0.000043 0.000039 0.000039 0.000045 0.000041
-         0.000050 0.000049 0.000053 0.000045 0.000038 0.000048 0.000060
-         0.000074 0.000025 0.000029
+uncert =
+    0.000040 0.000047 0.000046 0.000038 0.000041 0.000038 0.000045
+    0.000040 0.000035 0.000039 0.000043 0.000044 0.000046 0.000040
+    0.000041 0.000044 0.000043 0.000039 0.000039 0.000045 0.000041
+    0.000050 0.000049 0.000053 0.000045 0.000038 0.000048 0.000060
+    0.000074 0.000025 0.000029
 
 # The waveband filters:
-filters =
-    ../inputs/filters/fraine2014_wfc3_g141_1.153um.dat
+filters = ../inputs/filters/fraine2014_wfc3_g141_1.153um.dat
     ../inputs/filters/fraine2014_wfc3_g141_1.172um.dat
     ../inputs/filters/fraine2014_wfc3_g141_1.190um.dat
     ../inputs/filters/fraine2014_wfc3_g141_1.209um.dat
@@ -100,7 +99,7 @@ chisqscale = False
 # Perform the Gelman-Rubin convergence test along the MCMC:
 grtest = True
 # Filename to store the model fit for each MCMC evaluation:
-savemodel = models.npy
+savemodel = models_fraine.npy
 # Make plots:
 plots = True
 # MCMC log file:
@@ -158,9 +157,5 @@ thigh = 3000
 tempdelt = 100
 
 # Output spectrum file name:
-outspec    = ./HAT-P-11b_fraine_transit_spectrum_1.0-5.5um.dat
-# Output file with the radius where the optical depth reached toomuch:
-outtoomuch = ./HAT-P-11b_transit_toom.dat
-# Output file with the samplings info:
-outsample  = ./HAT-P-11b_transit_samp.dat
+outspec = ./HAT-P-11b_fraine_transit_spectrum_1.0-5.5um.dat
 
