Upated files for publication.

--- a/run07_HAT-P-11b_BART_101layers/BART_inputs_fraine.cfg
+++ b/run07_HAT-P-11b_BART_101layers/BART_inputs_fraine.cfg
@@ -1,6 +1,6 @@
 [MCMC]
 # Location of the output directory:
-loc_dir = ./inputs_chachan/
+loc_dir = ./inputs_fraine/
 
 # Tepfile name:
 tep_name = ../inputs/TEP/HAT-P-11b.tep
@@ -14,7 +14,7 @@ atmfile = ./atmosphere_HAT-P-11b_uniform.atm
 # Pressure-temperature model:
 PTtype = iso
 
-press_file = 51layers.pres
+press_file = 101layers.pres
 abun_file = solar1x.abn
 
 func = hack BARTfunc ../BART/code/
@@ -27,16 +27,16 @@ Tmin =  200.0
 Tmax = 3000.0
 
 # Model fitting parameters:
-parnames =   temp   R_p    pcloud  k_ray   offset  H2O  CH4   CO  CO2
-params   =  800.0  29100.0    0.0    0.0  0.00000  6.0  5.0  6.0  3.0
-pmin     =  200.5  15000.0   -6.0   -5.0 -0.00020  0.0  0.0  0.0  0.0
-pmax     = 2999.5  45000.0    2.0   10.0  0.00020 10.0 10.0 10.0 10.0
-stepsize =   30.0    100.0    0.3    0.3  0.00000  0.3  0.3  0.3  0.3
+parnames =   temp   R_p    pcloud   offset  H2O  CH4   CO  CO2
+params   =  800.0  29100.0    0.0 -0.00009  6.0  5.0  6.0  3.0
+pmin     =  200.5  15000.0   -6.0 -0.00020  0.0  0.0  0.0  0.0
+pmax     = 2999.5  45000.0    2.0  0.00020 10.0 10.0 10.0 10.0
+stepsize =   30.0    100.0    0.3  0.00001  0.3  0.3  0.3  0.3
 
 # Total number of MCMC samples (burn-in + final MCMC):
-numit = 2e6
+numit = 3e6
 # Number of parallel MCMC chains (= number of processors):
-nchains = 16
+nchains = 7
 # Number of burn-in iterations per chain:
 burnin = 8000
 # MCMC algorithm ('demc' for Differential Evolution or 'mrw' for
@@ -54,7 +54,7 @@ savemodel = models.npy
 # Make plots:
 plots = True
 # MCMC log file:
-logfile = MCMC_chachan_init.log
+logfile = MCMC_fraine_init.log
 
 # Verbosity level (0--5):
 verb = 1
@@ -71,7 +71,7 @@ csfile = ../inputs/CIA/CIA_HITRAN_H2H2_0200-3000K_1.0-500um.dat
 molfile = ../BART/modules/transit/inputs/molecules.dat
 
 # Spectral boundaries:
-wllow = 0.34
+wllow = 1.0
 wlhigh = 5.5
 wlfct = 1e-4
 
@@ -98,13 +98,13 @@ starrad = 0.68
 ethresh = 1e-10
 
 # Opacity-grid name and temperatures:
-opacityfile = opacity_HITEMP_Exomol_0.34-5.5um.dat
+opacityfile = opacity_HITEMP_Exomol_1.0-5.5um.dat
 tlow = 200
 thigh = 3000
 tempdelt = 100
 
 # Output spectrum file name:
-outspec = ./HAT-P-11b_chachan_transit_spectrum_0.34-5.5um.dat
+outspec = ./HAT-P-11b_fraine_transit_spectrum_1.0-5.5um.dat
 # Output file with the radius where the optical depth reached toomuch:
 outtoomuch = ./HAT-P-11b_transit_toom.dat
 # Output file with the samplings info:
